Adicionado titulo "Clientes"

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h2 class="text-center text-info pt-3">Consumindo Web API</h2>
         <p>Aprendendo a como consumir uma Web API.</p>
-
+        <p><h1>Clientes</h1></p>
         <div class="table-responsive">
             <table class="table table-bordered table-striped table-dark">
                 <thead>
